--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,10 @@ body {
 
 .w-20 { width: 20% !important; }
 .w-25 { width: 25% !important; }
+.w-30 { width: 30% !important; }
 .w-40 { width: 40% !important; }
 .w-60 { width: 60% !important; }
+.w-70 { width: 70% !important; }
+.w-75 { width: 75% !important; }
 .w-80 { width: 80% !important; }
 .w-20 { width: 20% !important; }
